--- a/partyBuilding-admin/pom.xml
+++ b/partyBuilding-admin/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>partyBuilding-generator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
