--- a/partyBuilding-activity/pom.xml
+++ b/partyBuilding-activity/pom.xml
@@ -78,6 +78,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.partyBuilding</groupId>
+            <artifactId>partyBuilding-framework</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -97,6 +102,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <warName>${project.artifactId}</warName>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
