--- a/partyBuilding-admin/pom.xml
+++ b/partyBuilding-admin/pom.xml
@@ -67,6 +67,12 @@
             <version>3.5.7</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.partyBuilding</groupId>
+            <artifactId>partyBuilding-activity</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
