--- a/partyBuilding-activity/pom.xml
+++ b/partyBuilding-activity/pom.xml
@@ -83,6 +83,20 @@
             <artifactId>partyBuilding-framework</artifactId>
         </dependency>
 
+        <!-- lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>4.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
