用户查询任务列表已开发

--- a/partyBuilding-admin/src/main/resources/application.yml
+++ b/partyBuilding-admin/src/main/resources/application.yml
@@ -72,9 +72,9 @@ spring:
     # 端口，默认为6379
     port: 6379
     # 数据库索引
-    database: 3
+    database: 0
     # 密码
-    password: 114514
+    password:
     # 连接超时时间
     timeout: 10s
     lettuce:
