--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,12 @@
                 <version>${partyBuilding.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.jsqlparser</groupId>
+                <artifactId>jsqlparser</artifactId>
+                <version>4.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
