--- a/partyBuilding-admin/src/main/resources/application-druid.yml
+++ b/partyBuilding-admin/src/main/resources/application-druid.yml
@@ -6,9 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://localhost:3306/ry-party?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-                username: root
-                password: 123456
+                url: jdbc:mysql://47.94.132.207:3306/partyBuilding?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                username: partyBuilding
+                password: JetZWzaXhXW5jSrt
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
